# myAIClone

./: .autopilot.yml  PROMPTS.md  README.md  config.yml  pyproject.toml
ai_clone/: config.py
ai_clone/ingestion/: models.py  pipeline.py
ai_clone/ingestion/parsers/: base.py  imessage.py  slack.py  telegram.py  whatsapp.py
ai_clone/memory/: consolidator.py  conversation_store.py  models.py  retriever.py
ai_clone/memory/embeddings/: base.py  sentence_transformer.py
ai_clone/memory/store/: base.py  chroma.py
ai_clone/personality/: builder.py  models.py  updater.py
docs/superpowers/plans/: 2026-05-06-memory-layer.md  2026-05-06-personality-profile-builder.md
docs/superpowers/specs/: 2026-05-06-ai-clone-design.md
tests/: test_config.py  test_integration_ingestion_profile.py
tests/ingestion/: test_models.py  test_pipeline.py
tests/ingestion/parsers/: test_imessage.py  test_slack.py  test_telegram.py  test_whatsapp.py
tests/memory/: test_abstractions.py  test_consolidator.py  test_conversation_store.py  test_integration_memory.py  test_models.py  test_retriever.py
tests/memory/embeddings/: test_sentence_transformer.py
tests/memory/store/: test_chroma.py
tests/personality/: test_builder.py  test_models.py  test_updater.py
