[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-clone"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "click>=8.1.7",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.4.0",
    "faster-whisper>=1.0.0",
    "webrtcvad>=2.0.10",
    "sounddevice>=0.4.6",
    "elevenlabs>=1.0.0",
    "openai>=1.12.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ai-clone = "ai_clone.cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
